# dis-exercise-4

./: Dockerfile  TF_CONFIG.py  create.sh  docker-compose.yml  nohup.out  pyproject.toml  requirements.txt  upload.sh
eng-to-spa-translation/: base.py  batch_infer.py  eng-to-spa-local.py  eng-to-spa.py  infer.py  multi-worker-training.py  single-working-training.py
mnist/: mnist.py  multi-worker-training.py
speech-recognition/: base.py  multi-worker-training.py  single-worker-training.py
